@@ -1,5 +1,7 @@
 #pragma once
 
+#include <type_traits>
+
 #include "completion.h"
 
 /** The Finite<T> class defines the Converter methods
@@ -13,6 +15,7 @@
 template<typename T>
 class Finite {
 public:
+
     using ValueList = std::vector<std::pair<T, std::string>>;
     static ValueList values;
     static std::string str(T cp) {
@@ -54,3 +57,37 @@ public:
         }
     }
 };
+
+template <typename T>
+struct is_finite : std::false_type {};
+
+/**
+ * A Converter implementation for types XX which are 'finite'. To make this applicable
+ * to a type XX, one needs to:
+ *
+ *   1. define the static variable:
+ *
+ *      Finite<XX>::values;
+ *
+ *   2. make the type fulfill the is_finite predicate:
+ *
+ *     template <>
+ *     struct is_finite<XX> : std::true_type {};
+ */
+template <typename T>
+class Converter<T, typename std::enable_if< is_finite<T>::value >::type> {
+public:
+    static T parse(const std::string& source) {
+        return Finite<T>::parse(source);
+    }
+    static std::string str(T payload) {
+        return Finite<T>::str(payload);
+    }
+    static void complete(Completion& complete, T const* relativeTo) {
+        Finite<T>::complete(complete, relativeTo);
+    }
+    static void complete(Completion& complete) {
+        Finite<T>::complete(complete, nullptr);
+    }
+};
+
